remove error code

--- a/notebooks/tutorials.ipynb
+++ b/notebooks/tutorials.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install -q git+https://github.com/kangmg/rmsd_ipython.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import rmsd_ipython\n",
     "rmsd_ipython.__version__"
    ]
